--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
       don’t hesitate to get in touch!</p>
     </div>
     <!-- Thank you state end -->
+    
+    
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://www.linkedin.com/in/christos-durro-53b33320a/">Christos Durro</a>.
+    </div>
   </main>
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
